[package]
name = "plcnext-sys"
version = "0.2.0"
authors = ["Martin Boers <mboers@phoenixcontact.com>"]
edition = "2018"
build = "build/main.rs"

description = "Allows access to PLCnext Control system services"
documentation = "https://github.com/PLCnext/rust-sample-runtime"
homepage = "https://www.phoenixcontact.com"
repository = "https://github.com/martinboers/rust-plcnext"
readme = "README.md"

keywords = ["Industrial", "Automation", "PLC", "PLCnext", "Phoenix"]
categories = ["external-ffi-bindings", "science::robotics", "embedded"]

license = "MIT"

exclude = [
    "target/",
    "**/*.rs.bk",
    "Cargo.lock"
]

[badges]
maintenance = { status = "experimental" }

[build-dependencies]
bindgen = "0.49.0"