[package]
name = "plcnext"
version = "0.2.0"
authors = ["Martin Boers <mboers@phoenixcontact.com>"]
edition = "2018"

description = "Allows access to PLCnext Control system services"
documentation = "https://github.com/PLCnext/rust-sample-runtime"
homepage = "https://www.phoenixcontact.com"
repository = "https://github.com/martinboers/rust-plcnext"
readme = "README.md"

keywords = ["Industrial", "Automation", "PLC", "PLCnext", "Phoenix"]
categories = ["external-ffi-bindings", "science::robotics", "embedded"]

license = "MIT"

# Files to exclude from the crate
exclude = [
    "target/",
    "**/*.rs.bk",
    "Cargo.lock"
]

[badges]
maintenance = { status = "experimental" }

[dependencies]
plcnext-sys = "0.2.0"
lazy_static = "1.3.0"
